Add: fully functional docker w/ jupyter nb example

--- a/examples/run_example.ipynb
+++ b/examples/run_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93d58afd-652b-4fd3-88d8-3595d2a0c350",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "cf284cec-a6fc-4c8b-8084-e0ddca0a8e43",
    "metadata": {},
    "outputs": [],
@@ -29,21 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "753e034a-732a-4f6f-bfef-f6ef5ce8b2f6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'exp_dir': '/root/.wei/experiments/Example Program_id_01HC10TTK33WK5MSRK37BH84Y4'}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This initializes the connection to the server and the logs \n",
     "# for this run of the program.\n",
@@ -52,19 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9a0c7725-5332-49cc-b0a6-36bb5fe8b51c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'wf': {'name': 'test_workflow', 'label': 'test_workflow', 'run_id': '01HC115VDTRQJ0VFAZRNAA4FZT', 'step_index': 0, 'experiment_path': '', 'hist': {}, 'status': 'new', 'result': {}, 'run_dir': 'runs/_01HC115VDTRQJ0VFAZRNAA4FZT', 'flowdef': [{'step': {'name': 'Sleep workcell for t seconds', 'module': 'sleeper', 'action': 'sleep', 'args': {'t': '5'}, 'checks': None, 'requirements': None, 'dependencies': None, 'priority': None, 'id': 'e2a5430c-d984-4106-84e9-b1b1f496ed4c', 'comment': 'Sleep for 5 seconds before we take a picture'}, 'locations': {}}, {'step': {'name': 'Take Picture', 'module': 'webcam', 'action': 'take_picture', 'args': {'image_name': 'test_snapshot.jpg', 'target': [0, 0, 0, 0, 0, 0]}, 'checks': None, 'requirements': None, 'dependencies': None, 'priority': None, 'id': '14b39245-15b2-49df-8263-f19f2a64a18a', 'comment': None}, 'locations': {'target': 'webcam.pos'}}], 'payload': None}, 'run_id': '01HC115VDTRQJ0VFAZRNAA4FZT', 'status': 'WorkflowStatus.NEW'}\n",
-      "{'wf': {'name': 'test_workflow', 'label': 'test_workflow', 'run_id': '01HC115VDTRQJ0VFAZRNAA4FZT', 'step_index': 0, 'experiment_path': '', 'hist': {}, 'status': 'new', 'result': {}, 'run_dir': 'runs/_01HC115VDTRQJ0VFAZRNAA4FZT', 'flowdef': [{'step': {'name': 'Sleep workcell for t seconds', 'module': 'sleeper', 'action': 'sleep', 'args': {'t': '5'}, 'checks': None, 'requirements': None, 'dependencies': None, 'priority': None, 'id': 'e2a5430c-d984-4106-84e9-b1b1f496ed4c', 'comment': 'Sleep for 5 seconds before we take a picture'}, 'locations': {}}, {'step': {'name': 'Take Picture', 'module': 'webcam', 'action': 'take_picture', 'args': {'image_name': 'test_snapshot.jpg', 'target': [0, 0, 0, 0, 0, 0]}, 'checks': None, 'requirements': None, 'dependencies': None, 'priority': None, 'id': '14b39245-15b2-49df-8263-f19f2a64a18a', 'comment': None}, 'locations': {'target': 'webcam.pos'}}], 'payload': None}, 'run_id': '01HC115VDTRQJ0VFAZRNAA4FZT', 'status': 'WorkflowStatus.NEW'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This runs the simulated_workflow a simulated workflow\n",
     "flow_info = exp.run_job(wf_path.resolve(), simulate=True)\n",
@@ -73,19 +53,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "dbafbd94-62d8-4c5f-928f-671c621212f1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'status': 'completed', 'result': {}, 'hist': {'Sleep workcell for t seconds': {'action_log': '', 'action_msg': 'StepStatus.Succeeded', 'action_response': 'True'}, 'Take Picture': {'action_log': \"OpenCV(4.8.0) /io/opencv/modules/imgcodecs/src/loadsave.cpp:787: error: (-215:Assertion failed) !_img.empty() in function 'imwrite'\\n\", 'action_msg': 'StepStatus.Failed', 'action_response': 'False'}, 'run_dir': 'wei_runs/test_workflow_01HC115VDTRQJ0VFAZRNAA4FZT'}}\n",
-      "{'status': 'completed', 'result': {}, 'hist': {'Sleep workcell for t seconds': {'action_log': '', 'action_msg': 'StepStatus.Succeeded', 'action_response': 'True'}, 'Take Picture': {'action_log': \"OpenCV(4.8.0) /io/opencv/modules/imgcodecs/src/loadsave.cpp:787: error: (-215:Assertion failed) !_img.empty() in function 'imwrite'\\n\", 'action_msg': 'StepStatus.Failed', 'action_response': 'False'}, 'run_dir': 'wei_runs/test_workflow_01HC115VDTRQJ0VFAZRNAA4FZT'}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This checks the state of the experiment in the queue\n",
     "flow_status = exp.query_job(flow_info[\"run_id\"])\n",
@@ -96,7 +67,7 @@
     "while flow_status[\"status\"] != WorkflowStatus.COMPLETED:\n",
     "    print(flow_status)\n",
     "    time.sleep(1)\n",
-    "    flow_status = exp.query_job(flow_info[\"job_id\"])\n",
+    "    flow_status = exp.query_job(flow_info[\"run_id\"])\n",
     "print(flow_status)"
    ]
   },
