Refactor: breakout example/test/docker dependencies

--- a/examples/run_example.ipynb
+++ b/examples/run_example.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import time\n",
     "from pathlib import Path\n",
+    "import json\n",
     "\n",
     "from wei import Experiment\n",
     "from wei.core.data_classes import WorkflowStatus"
@@ -22,7 +23,7 @@
    "outputs": [],
    "source": [
     "# The path to the Workflow definition yaml file\n",
-    "wf_path = Path(\"../wei/tests/test_workflow.yaml\")\n",
+    "wf_path = Path(\"./example_workflow.yaml\")\n",
     "# This defines the Experiment object that will communicate with the server for workflows\n",
     "exp = Experiment(\"wei_server\", \"8000\", \"Example Program\")"
    ]
@@ -48,7 +49,7 @@
    "source": [
     "# This runs the simulated_workflow a simulated workflow\n",
     "flow_info = exp.run_job(wf_path.resolve(), simulate=True)\n",
-    "print(flow_info)"
+    "print(json.dumps(flow_info, indent=2))"
    ]
   },
   {
@@ -60,16 +61,13 @@
    "source": [
     "# This checks the state of the experiment in the queue\n",
     "flow_status = exp.query_job(flow_info[\"run_id\"])\n",
-    "# This will print out the queued job\n",
-    "print(flow_status)\n",
     "# This will wait until the flow has run and then\n",
     "# print out the final result of the flow\n",
-    "print(flow_status)\n",
     "while flow_status[\"status\"] != WorkflowStatus.COMPLETED:\n",
     "    print(flow_status[\"status\"])\n",
     "    time.sleep(1)\n",
     "    flow_status = exp.query_job(flow_info[\"run_id\"])\n",
-    "print(flow_status)"
+    "print(json.dumps(flow_status, indent=2))"
    ]
   },
   {
