--- a/examples/run_example.ipynb
+++ b/examples/run_example.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# This runs the simulated_workflow a simulated workflow\n",
-    "flow_info = exp.start_run(wf_path.resolve(), simulate=True)\n",
+    "flow_info = exp.start_run(wf_path.resolve(), simulate=False)\n",
     "print(json.dumps(flow_info, indent=2))"
    ]
   },
