WEI Engine overhaul (#91)
* implementing compatibility for rest_resturn

* testing and validating, stuck on where to put the file

* Bug Fix: no longer only captures one version of a location's coordinates (#87)

* Bug Fix: no longer only captures one version of a location's coordinates

* Refactor: code cleanup; Fix: location vs. location_name confusion

* Improvement: more precise Location validation

* Modify: extended example workcells to better validate location management

* Refactor: cleanup rest clients; Add: filename handling for returned files; Fix: docker build performance

* Fix: readd error catching in server

* working locally

* Refactor: Return StepResponse from /action in modules

* Rename: *_client.py -> *_node.py

* Refactor: update FileReponse usage to use StepResponse

* Refactor: use StepResponse for json/header validation

* Fix: get typed responses for rest return

* Fix: url for webcam node

* Docs: update StepFileResponse function comment

* initial breakout, cleaning up workflow, workcell, step etc.

* WIP: bulk of workflows.py done, scheduler in progress

* working with manual test

* working with manual test

* WIP: more cleaning

* WIP: scheduler->engine; aggressive code cleanup

* Overhaul loggers, events, experiments

* Foiled by circular dependencies

* WIP: Got to new error message

* Better config?

* Fix: Config works now, squashing refactor-induced bugs

* Tweaks to scheduler

* manual test working

* working test

* reusing unit tests

* WIP: getting mypy up to speed

* Fix: mypy passing for module (TODO: tests and examples)

* building unit test infrastruture

* filenames

* filenames

* filenames

* Tested against the docker examples

* fixing filenames

* fixing filenames

* resetting tests

* Fix: Create test experiments folder

* fix: added payload testing

* Fix: properly handles file response now

* Fix examples

* fixing file retu

--- a/examples/run_example.ipynb
+++ b/examples/run_example.ipynb
@@ -11,7 +11,7 @@
     "from pathlib import Path\n",
     "import json\n",
     "\n",
-    "from wei import Experiment\n",
+    "from wei import ExperimentClient as Experiment\n",
     "from wei.core.data_classes import WorkflowStatus"
    ]
   },
@@ -48,14 +48,14 @@
    "outputs": [],
    "source": [
     "# This runs the simulated_workflow a simulated workflow\n",
-    "flow_info = exp.start_run(wf_path.resolve(), simulate=True)\n",
+    "flow_info = exp.start_run(wf_path.resolve(), simulate=False)\n",
     "print(json.dumps(flow_info, indent=2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63101880-68ad-43a5-8c9c-bf2509d69175",
+   "id": "8e1e5bde-7325-4f71-9df9-7b175827cda0",
    "metadata": {},
    "outputs": [],
    "source": []
