Prepare Repo for 0.5 Release (#92)
* Cleaning up examples, README, mypy and autoformatting

* Add Pre-Commit for automatted formatting and linting

* Ignore vim artifacts

* More precommit fixes

* Fix: shorter timeout for state checks (if the module hasn't responded after 10 seconds, it probably won't)

* WIP: ruff + pdb + pyproject.toml

* Explicitly ignore pdm/ruff artifacts

* - PDM and Pyproject.toml fully operational
- Split Dockerfile/Dockerfile-dev's
- All checks passing
- TODO: Pytests need TLC
- TODO: Container Registry
- TODO: Pypi

* - Add more docker scripts

* Further refined README; pruning dev dependencies

* Fix: redis overconnection issue

* Fix mypy typing for redis; add get_state script

* Fix: breaking bug in location name lookup

* Address mypy complaints; tmux environment capture

* Replace Acknowledgements w/ Citing section; add clear_state.py script

* Update Github Actions

* Pin python version for pdm in pytest action

* Working on tests

* Make pytests run on push + PR

---------

Co-authored-by: tginsbu1 <tsg44@cornell.edu>

--- a/examples/experiment_example.ipynb
+++ b/examples/experiment_example.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import time\n",
+    "import os\n",
     "from pathlib import Path\n",
     "import json\n",
     "\n",
@@ -18,13 +19,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30a6b085",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SIMULATE = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cf284cec-a6fc-4c8b-8084-e0ddca0a8e43",
    "metadata": {},
    "outputs": [],
    "source": [
     "# The path to the Workflow definition yaml file\n",
-    "wf_path = Path(\"./example_workflow.yaml\")\n",
-    "# This defines the Experiment object that will communicate with the server for workflows\n",
+    "wf_path = Path(globals()['_dh'][0]).parent / \"example_yaml/example_workflow.yaml\"\n",
+    "# This defines the Experiment object that will communicate with the WEI server\n",
     "exp = Experiment(\"wei_server\", \"8000\", \"Example Program\")"
    ]
   },
@@ -47,8 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This runs the simulated_workflow a simulated workflow\n",
-    "flow_info = exp.start_run(wf_path.resolve(), simulate=False)\n",
+    "# This runs the workflow\n",
+    "flow_info = exp.start_run(wf_path.resolve(), simulate=SIMULATE, blocking=True)\n",
     "print(json.dumps(flow_info, indent=2))"
    ]
   },
@@ -58,7 +69,11 @@
    "id": "8e1e5bde-7325-4f71-9df9-7b175827cda0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# If the workflow run isn't simulated, the below lines will fetch the result and save it in our local directory\n",
+    "if not SIMULATE:\n",
+    "    exp.get_file(flow_info[\"hist\"][\"Take Picture\"][\"action_msg\"], \"experiment_output.jpg\")"
+   ]
   }
  ],
  "metadata": {
