initial logger cleaning

--- a/examples/experiment_example.ipynb
+++ b/examples/experiment_example.ipynb
@@ -7,13 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import time\n",
-    "import os\n",
     "from pathlib import Path\n",
     "import json\n",
     "\n",
-    "from wei import ExperimentClient as Experiment\n",
-    "from wei.core.data_classes import WorkflowStatus"
+    "from wei import ExperimentClient as Experiment"
    ]
   },
   {
@@ -23,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Change this line to use your real webcam\n",
     "SIMULATE = True"
    ]
   },
@@ -35,6 +33,7 @@
    "source": [
     "# The path to the Workflow definition yaml file\n",
     "wf_path = Path(globals()['_dh'][0]).parent / \"example_yaml/example_workflow.yaml\"\n",
+    "\n",
     "# This defines the Experiment object that will communicate with the WEI server\n",
     "exp = Experiment(\"wei_server\", \"8000\", \"Example Program\")"
    ]
