--- a/examples/experiment_example.ipynb
+++ b/examples/experiment_example.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "# The path to the Workflow definition yaml file\n",
-    "wf_path = Path(globals()['_dh'][0]).parent / \"example_yaml/example_workflow.yaml\"\n",
+    "wf_path = Path(globals()['_dh'][0]) / \"example_yaml/example_workflow.yaml\"\n",
     "\n",
     "# This defines the Experiment object that will communicate with the WEI server\n",
     "exp = Experiment(\"wei_server\", \"8000\", \"Example Program\")"
